MDEV-38327 Do not use rowid filter when using index merge with [sort] intersection